# toolchain-performance

./: .gitmodules  CHANGELOG.md  LICENSE  README.md  toolchain-perf.R  toolchain-perf.cabal
app/: Main.hs
src/: ToolchainPerf.hs
src/ToolchainPerf/: Graph.hs  IO.hs  Types.hs
tests/: tests.dhall
tests/hello/: Hello.hi  hello-world.cabal  runs.csv
tests/simple-lenses/: Baseline.hs  Manual.hs  SimpleLenses.hs  simple-lenses.cabal
