cabal-version:      3.0
name:               toolchain-perf
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Josh Meredith
maintainer:         joshmeredith2008@gmail.com
-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable toolchain-perf
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0
                    , turtle
		    , time
		    , text
		    , cassava
		    , list-t
		    , bytestring
    hs-source-dirs:   app
    default-language: Haskell2010
