cabal-version:      3.0
name:               toolchain-perf
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Josh Meredith
maintainer:         joshmeredith2008@gmail.com
-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common all
    ghc-options: -Wall
    build-depends:    base <= 5.0
                    , turtle
                    , time
                    , text
                    , cassava
                    , list-t
                    , bytestring
                    , directory
                    , clock
                    , dhall
                    , mtl
                    , containers
                    , transformers
                    , monad-control
		    , data-default-class
		    , Chart
		    , Chart-diagrams
		    , lens
		    , statistics
		    , vector

executable toolchain-perf
    import:           all
    main-is:          Main.hs
    build-depends:    toolchain-perf
    hs-source-dirs:   app
    default-language: Haskell2010

library
    import:           all
    hs-source-dirs:   src
    default-language: Haskell2010
    exposed-modules:  ToolchainPerf
                    , ToolchainPerf.Graph
                    , ToolchainPerf.Types
